# calculator-python-example

./: .pre-commit-config.yaml  Makefile  README.md  main.py  main2.py  pyproject.toml
docs/source/: classes.rst  conf.py  index.rst  modules.rst  usage.rst
lesson/: LESSON.md  LINK.md  README-p1-claude.md  README-p2-claude.md  bad_code.py  class_example.py  pytest_example_test.py
src/calculator/: __init__.py  calculator.py  calculator_class.py
tests/: test_calculator.py  test_calculator_class.py
